--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,3 +19,17 @@ dev_dependencies:
 flutter: 
   uses-material-design: true
 
+  fonts:
+   - family: Roboto
+     fonts:
+       - asset: assets/fonts/Roboto-Regular.ttf
+
+  assets:
+    - assets/images/
+
+
+flutter_assets:
+  assets_path: assets/images/
+  output_path: lib/utils/
+  filename: assets.dart
+  field_prefix:
