--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,34 +2,34 @@ name: test_screens
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
+environment:
   sdk: '>=3.4.3 <4.0.0'
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.6
+  flutter:
+    sdk: flutter
+  flutter_svg: ^2.0.10+1
   get: 4.6.6
-  flutter: 
-    sdk: flutter
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: 4.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
+flutter:
   uses-material-design: true
 
   fonts:
-   - family: Roboto
-     fonts:
-       - asset: assets/fonts/Roboto-Regular.ttf
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
 
   assets:
     - assets/images/
-
 
 flutter_assets:
   assets_path: assets/images/
   output_path: lib/utils/
   filename: assets.dart
-  field_prefix:
+  field_prefix: null
