--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,13 @@ environment:
   sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
+  convex_bottom_bar: ^3.2.0
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.10+1
   get: 4.6.6
+  persistent_bottom_nav_bar: ^6.2.1
 
 dev_dependencies:
   flutter_lints: 4.0.0
