--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,12 @@ environment:
 dependencies:
   convex_bottom_bar: ^3.2.0
   cupertino_icons: ^1.0.6
+  fl_chart: ^0.68.0
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.10+1
   get: 4.6.6
+  intl: ^0.19.0
   persistent_bottom_nav_bar: ^6.2.1
 
 dev_dependencies:
